Agregar /artists y /artists/:id

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,75 +1,11 @@
-<!--NavBar-->
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>    
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Buscar">
-        </div>
-        <button type="submit" class="btn btn-default">Buscar</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-
-<!--Card-->
-
-<div class="card-deck">
-  <div class="card">
-    <img class="card-img-top" src=".../100px200/" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Shakira</h5>
-      <p class="card-text">Debutó en el mercado discográfico hispanoamericano en 1995 con el álbum Pies descalzos colaborando con Luis Fernando Ochoa en la composición y producción de los once temas incluidos, en los que se destacan «Estoy aquí», «¿Dónde estás corazón?» y «Antología». Años después, continuó trabajando con Ochoa y lanzó su álbum ¿Dónde están los ladrones? (1998). El éxito internacional le llegó en el 2001 con su álbum Laundry Service.
-
-Cuatro años más tarde, Shakira lanzó su sexto álbum de estudio, titulado Fijación oral vol. 1 y volvió a colaborar con Luis Fernando Ochoa, convirtió en una de las artistas más aclamadas internacionalmente al iniciar la promoción de su quinto álbum de estudio, Oral Fixation vol. 2, cuyo relanzamiento a inicios de 2006 involucró el lanzamiento de «Hips Don't Lie» ("Las caderas no mienten"), canción que se convirtió en el sencillo más exitoso del año a nivel mundial, siendo incluido en la banda sonora de la Copa Mundial de Fútbol de 2006. Shakira es la artista femenina internacional con mayor número de ventas durante la década de 2000 y la única que tuvo cinco sencillos («Hips Don't Lie», «Loca», «Whenever, Wherever», «Underneath Your Clothes» y «La tortura», en las posiciones #1, #16, #17, #18, y #19, respectivamente) en la lista de los veinte más vendidos en la pasada década (2000-2009), siendo «Hips Don't Lie» el sencillo más vendido de la década, colocándose entre los primeros cuarenta en la historia de la música.
-
-En 2013 Shakira se convirtió en la segunda mujer viva más premiada y la tercera en la historia.5​6​ Había ganado ya tres Premios Grammy, siete Billboard Music Award, cinco American Music Awards6​ y doce Premios Grammy Latino, entre otros.7​ La empresa Live Nation consideró a Shakira la artista más importante de su generación por su impacto global consolidado y la situó con su contrato como referencia entre los artistas más importantes del mundo.8​ Según la revista Forbes, es una de las cantantes que más dinero gana y está considerada una de las cien mujeres más influyentes del planeta.9​10​ Se estima que Shakira ha vendido alrededor de 80 millones de álbumes y más de 100 millones de sencillos en todo el mundo. 11​12​ Es también la artista latinoamericana más vendida de toda la historia y una de las artistas con mayores ventas discográficas de la historia. La revista Billboard ha situado su carrera como una de las más consolidadas en la historia de Latinoamérica, situando tres de sus sencillos entre los veinte más importantes en la historia de Billboard, «Chantaje» «La tortura» y «Suerte» situándolos en las posiciones #6 #7 y #16.13​ Entre sus principales récords, se convirtió en la única artista en la historia de VEVO en lograr conseguir más de 100 millones de reproducciones con una misma canción en dos versiones, logró que ha repetido varias veces; primero con «Waka Waka (Esto es África)», luego con «La La La (Brasil 2014)», seguido por «Loba» y «Suerte» y finalmente con «Loca» tanto en las versiones en inglés como en español.14​15​ En 1999, la transmisión de su primer álbum en vivo MTV Unplugged se convirtió en la primera presentación acústica internacional transmitida en español por MTV en Estados Unidos, y posteriormente a través de varias redes europeas. Es la primera y, hasta ahora, única persona junto con Cristiano Ronaldo16​ que ha conseguido 100 millones de seguidores en Facebook y ha sido la única en participar musicalmente en tres mundiales de fútbol consecutivos: en 2006 con «Hips Don't Lie», en 2010 con «Waka Waka (Esto es África)» y en 2014 con una versión de la canción «Dare (La La La)».17​18​ A fines de 2017, Shakira se convirtió en la primera artista en ingresar cuatro canciones en español de un solo álbum a Billboard Hot 100, la principal lista musical de los Estados Unidos
-
-Su gira musical Sale el sol World Tour (2010-2011), recaudó más de 145 millones de dólares y logró reunir a más de cuatro millones de personas, siendo la segunda gira consecutiva de Shakira en lograr esto.19​.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago by Roberto Palacios</small></p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1><%= @artist.name %></h1>
+      <a href="<%= @artist.image_url %>" target="_blank">¡Obtenlo!</a>
     </div>
   </div>
+</div>
  
 
 
