--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,75 +1,27 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Brand</a>
-    </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+      <h1>Artistas</h1>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>    
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Buscar">
-        </div>
-        <button type="submit" class="btn btn-default">Buscar</button>
-      </form>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+      <div class="text-right">
+        <%= link_to "Publicar Artista", new_artist_path, class: "btn btn-primary" %>
+      </div>
 
-<!-- Card-Group-->
-
-<div class="card-group">
-  <div class="card">
-    <img class="card-img-top" src=".../800x400?auto=yes&bg=777&fg=555&text=First slide" alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Shakira</h5>
-      <p class="card-text">Shakira Isabel Mebarak Ripoll(Barranquilla, 2 de febrero de 1977) es una cantautora, productora discográfica, bailarina, modelo, instrumentista, empresaria, actriz, embajadora de buena voluntad de la UNICEF y filántropa colombiana, ha sido nombrada varias veces por Sony y Billboard con el sobrenombre de La reina del pop latino.</p>
-    </div>
-    <div class="card-footer">
-      <button type="button" class="btn btn-primary">Ver mas</button>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
-
- 
- 
-
+      <table class="table">
+        <tr>
+          <th>Id</th>
+          <th>Nombre</th>
+          <th>URL</th>
+        </tr>
+        <% @artists.each do |artist| %>
+          <tr>
+            <td><%= artist.id %></td>
+            <td><%= artist.name %></td>
+            <td><%= artist.image_url %></td>
+          </tr>
+        <% end %>
+      </table>
+    </div> 
+  </div> 
+</div>
 
